--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     },
     "scripts": {
         "build": "npx webpack",
-        "dev": "npx webpack serve --mode development --env development --watch-content-base"
+        "dev": "npx webpack serve --watch-content-base"
     },
     "author": "Shirokikh Yanis",
     "license": "ISC"
