--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "css-url-relative-plugin": "git+https://github.com/yibn2008/css-url-relative-plugin.git",
         "cssnano": "^4.1.10",
         "file-loader": "^6.2.0",
+        "gh-pages": "^3.1.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^5.0.0-alpha.9",
         "mini-css-extract-plugin": "^1.2.1",
@@ -30,7 +31,9 @@
     },
     "scripts": {
         "build": "npx webpack",
-        "dev": "npx webpack serve --watch-content-base"
+        "dev": "npx webpack serve --watch-content-base",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "author": "Shirokikh Yanis",
     "license": "ISC"
